# pqc-embedded-evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  sdkconfig_old
components/crypto/: CMakeLists.txt  randombytes.c  randombytes.h
components/liboqs/: CMakeLists.txt  shim.c
components/sphincsplus/: CMakeLists.txt
components/sphincsplus/ref/: api.h  fips202.c  hash_shake.c  params.h  rng.c  sha2.h  sign.c  thash_sha2_robust.c  thash_shake_robust.c  thash_shake_simple.c  utils.h
components/sphincsplus/ref/params/: params-sphincs-haraka-128f.h  params-sphincs-haraka-128s.h  params-sphincs-haraka-192f.h  params-sphincs-haraka-192s.h  params-sphincs-haraka-256f.h  params-sphincs-haraka-256s.h  params-sphincs-sha2-128f.h  params-sphincs-sha2-128s.h  params-sphincs-sha2-192f.h  params-sphincs-sha2-192s.h  params-sphincs-sha2-256f.h  params-sphincs-sha2-256s.h  params-sphincs-shake-128f.h  params-sphincs-shake-128s.h  params-sphincs-shake-192f.h  params-sphincs-shake-192s.h  params-sphincs-shake-256f.h  params-sphincs-shake-256s.h
main/: CMakeLists.txt  Kconfig  hello_world_main.c  main.c
main/bench/mldsa/: bench_mldsa.c  bench_mldsa.h
main/bench/mlkem/: bench_mlkem.c  bench_mlkem.h
main/bench/slhdsa/: bench_slhdsa.c  bench_slhdsa.h
main/measure/: ppk2_trigger.c  ppk2_trigger.h
