idf_component_register(SRCS "ref/address.c"
                            "ref/fors.c"
                            "ref/hash_sha2.c"
                            "ref/hash_shake.c"
                            "ref/hash_haraka.c"
                            "ref/merkle.c"
                            "ref/rng.c"
                            "ref/sha2.c"
                            "ref/sign.c"
                            "ref/thash_sha2_simple.c"
                            "ref/thash_sha2_robust.c"
                            "ref/thash_shake_simple.c"
                            "ref/thash_shake_robust.c"
                            "ref/thash_haraka_simple.c"
                            "ref/thash_haraka_robust.c"
                            "ref/utils.c"
                            "ref/utilsx1.c"
                            "ref/wots.c"
                            "ref/wotsx1.c"
                    INCLUDE_DIRS "ref"
                    REQUIRES crypto)
